--- a/index.html
+++ b/index.html
@@ -11,28 +11,71 @@
 
   <body>
 
-    <div class="grid-container">
+<div class="container">
+
+  <div class="column-one">
+    <div class="one-row-one"> blah
+    </div>
+    <div class="one-row-two">
+      blah 2
+    </div>
+  </div>
+
+
+
+
+  <div class="column-two">
+    <div class="two-row-one">
+
+      <video width="" height="" controls>
+        <source src="trailer.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
+
+    </div>
+    <div class="two-row-two">
+      blah
+    </div>
+  </div>
+
+
+  <div class="column-three">
+    <div class="three-row-one">
+      blah
+    </div>
+    <div class="three-row-two">
+      blah too hello everyone
+    </div>
+
+  </div>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="grid-container">
       <div class="grid">
 
-        <!--first item  -->
         <div class="item one">
           <img src="#" alt="Maximus face">
           <p>Maximus<br>Legio Hispania</p>
           <section>Eniemies, conquered, rank</section>
         </div>
 
-        <!-- second one -->
-          <video width="500" height="400" controls>
-            <source src="trailer.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
 
-        <!--  third one-->
         <div class="item three">
           <p>A C D E <br>F H G I J<br>M N L T<br>R S U V<br>Q X W Y<br>O P</p>
         </div>
 
-        <!-- fourth one -->
         <div class="item four">
           <div>
             LEGIO HISPANIA
@@ -44,19 +87,19 @@
 
         </div>
 
-        <!-- fifth one -->
+
         <div class="item five">
           <img src="map1.png" alt="map">
           <p>blah</p>
         </div>
 
-        <!-- six -->
+
         <div class="item six">
           <p>Surrender<br>ANNILATED BY LEGIO HISPANIA</p>
         </div>
 
       </div>
-    </div>
+    </div> -->
 
 
   </body>
