Fix column 3 row one

--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
 <div class="container">
 
   <div class="column-one">
-    <div class="one-row-one"> blah
+    <div class="one-row-one">
+      <img src="#" alt="Maximus face">
+      <h1>Maximus</h1>
+      <h3>Legio Hispania</h3>
+      <p>Eniemies, conquered, rank</p>
     </div>
+
+
     <div class="one-row-two">
-      blah 2
+      <img src="#" alt="logo">
+      <h1>Legio Hispania</h1>
+      <p></p>
+      <p></p>
     </div>
   </div>
 
@@ -26,26 +35,40 @@
 
   <div class="column-two">
     <div class="two-row-one">
-
-      <video width="" height="" controls>
+      <video class="video" width="100%" height="auto" controls>
         <source src="trailer.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
 
     </div>
     <div class="two-row-two">
-      blah
+      <img src="#" alt="map">
+      <p></p>
+      <p></p>
+      <p></p>
     </div>
   </div>
 
 
   <div class="column-three">
     <div class="three-row-one">
-      blah
-    </div>
+
+        <h1 align="center">A C D E <br>F H G I J<br>M N L T<br>R S U V<br>Q X W Y<br>O P</h1>
+
+
+
+
+
+  </div>
+
+
     <div class="three-row-two">
-      blah too hello everyone
+      <p></p>
+      <p></p>
+      <p></p>
     </div>
+
+
 
   </div>
 
@@ -66,14 +89,12 @@
       <div class="grid">
 
         <div class="item one">
-          <img src="#" alt="Maximus face">
-          <p>Maximus<br>Legio Hispania</p>
-          <section>Eniemies, conquered, rank</section>
+
         </div>
 
 
         <div class="item three">
-          <p>A C D E <br>F H G I J<br>M N L T<br>R S U V<br>Q X W Y<br>O P</p>
+
         </div>
 
         <div class="item four">
