--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     </div>
     <div class="two-row-two">
-      <img src="#" alt="map">
+      <img src="map1.png" alt="map">
       <p></p>
       <p></p>
       <p></p>
@@ -52,20 +52,13 @@
 
   <div class="column-three">
     <div class="three-row-one">
-
         <h1 align="center">A C D E <br>F H G I J<br>M N L T<br>R S U V<br>Q X W Y<br>O P</h1>
-
-
-
-
-
-  </div>
+    </div>
 
 
     <div class="three-row-two">
-      <p></p>
-      <p></p>
-      <p></p>
+      <h1>SURRENDER</h1>
+      <h3>ANNIHILIATED BY LEGIO HISPANIA</h3>
     </div>
 
 
@@ -85,14 +78,8 @@
 
 
 
-    <!-- <div class="grid-container">
-      <div class="grid">
 
-        <div class="item one">
-
-        </div>
-
-
+<!--
         <div class="item three">
 
         </div>
@@ -110,7 +97,7 @@
 
 
         <div class="item five">
-          <img src="map1.png" alt="map">
+
           <p>blah</p>
         </div>
 
@@ -120,7 +107,7 @@
         </div>
 
       </div>
-    </div> -->
+    </div> --> -->
 
 
   </body>
