Fix column two row two

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </div>
     <div class="two-row-two">
       <img src="map1.png" alt="map">
-      <p></p>
-      <p></p>
-      <p></p>
+      <h4>Warfare stars</h4>
+      <h4>Slaves Conqured</h4>
+      <h4>Warfare formation</h4>
     </div>
   </div>
 
