fixed responsive(Media query, addded round placeholder)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="column-one">
     <div class="one-row-one">
-      <img src="#" alt="Maximus face">
+      <img class="maximus_face" src="/Users/anthonyclemow/desktop/projects/kass_project/design-mock/round-placeholder.png" alt="Maximus face">
       <h1>Maximus</h1>
       <h3>Legio Hispania</h3>
       <p>Eniemies, conquered, rank</p>
@@ -52,7 +52,7 @@
 
   <div class="column-three">
     <div class="three-row-one">
-        <h1 align="center">A C D E <br>F H G I J<br>M N L T<br>R S U V<br>Q X W Y<br>O P</h1>
+        <h1 class="column-three_header" align="center">A C D E <br>F H G I J<br>M N L T<br>R S U V<br>Q X W Y<br>O P</h1>
     </div>
 
 
