--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Mock desgin</title>
     <link href="https://fonts.googleapis.com/css?family=Supermercado+One" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="normalize.css">
@@ -15,7 +15,7 @@
 
   <div class="column-one">
     <div class="one-row-one">
-      <img class="maximus_face" src="/Users/anthonyclemow/desktop/projects/kass_project/design-mock/round-placeholder.png" alt="Maximus face">
+      <img class="maximus_face" src="round-placeholder.png" alt="Maximus face">
       <h1>Maximus</h1>
       <h3>Legio Hispania</h3>
       <p>Eniemies, conquered, rank</p>
@@ -23,7 +23,7 @@
 
 
     <div class="one-row-two">
-      <img src="#" alt="logo">
+      <img src="logo.png" alt="logo">
       <h1>Legio Hispania</h1>
       <p></p>
       <p></p>
@@ -35,14 +35,14 @@
 
   <div class="column-two">
     <div class="two-row-one">
-      <video class="video" width="100%" height="auto" controls>
+      <video class="video" controls poster="video-image.png" width="100%" height="auto" controls>
         <source src="trailer.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
 
     </div>
     <div class="two-row-two">
-      <img src="map1.png" alt="map">
+      <img src="map-1.png" alt="map">
       <h4>Warfare stars</h4>
       <h4>Slaves Conqured</h4>
       <h4>Warfare formation</h4>
@@ -52,7 +52,7 @@
 
   <div class="column-three">
     <div class="three-row-one">
-        <h1 class="column-three_header" align="center">A C D E <br>F H G I J<br>M N L T<br>R S U V<br>Q X W Y<br>O P</h1>
+        <h1 class="column-three_header">A C D E <br>F H G I J<br>M N L T<br>R S U V<br>Q X W Y<br>O P</h1>
     </div>
 
 
