--- a/index.html
+++ b/index.html
@@ -10,65 +10,62 @@
   </head>
 
   <body>
+    <div class="container">
+      <div class="column-one">
+        <div class="one-row-one">
+          <div class="top-container">
+            <img class="maximus_face" src="round-placeholder.png" alt="Maximus face">
+            <h1>Maximus</h1>
+            <h3>Legio Hispania</h3>
+          </div>  
+          <div class="bottom-container">
+            <ul>
+              <li>Eniemies</li> 
+              <li>Conquered</li>
+              <li>Rank</li>
+            </ul>
+          </div>
+        </div>
 
-<div class="container">
+        <div class="one-row-two">
+          <img src="logo.png" alt="logo">
+          <h1>Legio Hispania</h1>
+          <p></p>
+          <p></p>
+        </div>
+      </div>
 
-  <div class="column-one">
-    <div class="one-row-one">
-      <img class="maximus_face" src="round-placeholder.png" alt="Maximus face">
-      <h1>Maximus</h1>
-      <h3>Legio Hispania</h3>
-      <p>Eniemies, conquered, rank</p>
+      <div class="column-two">
+        <div class="two-row-one">
+          <video class="video" controls poster="video-image.png">
+            <source src="trailer.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
+        </div>
+
+        <div class="two-row-two">
+          <div class="top-container">
+            <img src="map-1.png" alt="map">
+          </div>
+          <div class="bottom-container">
+            <h4>Warfare stars</h4>
+            <h4>Slaves Conqured</h4>
+            <h4>Warfare formation</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="column-three">
+        <div class="three-row-one">
+            <h1 class="column-three_header">A C D E <br>F H G I J<br>M N L T<br>R S U V<br>Q X W Y<br>O P</h1>
+        </div>
+
+        <div class="three-row-two">
+          <h1>SURRENDER</h1>
+          <h3>ANNIHILIATED BY LEGIO HISPANIA</h3>
+        </div>
+      </div>
+
     </div>
-
-
-    <div class="one-row-two">
-      <img src="logo.png" alt="logo">
-      <h1>Legio Hispania</h1>
-      <p></p>
-      <p></p>
-    </div>
-  </div>
-
-
-
-
-  <div class="column-two">
-    <div class="two-row-one">
-      <video class="video" controls poster="video-image.png" width="100%" height="auto" controls>
-        <source src="trailer.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-      </video>
-
-    </div>
-    <div class="two-row-two">
-      <img src="map-1.png" alt="map">
-      <h4>Warfare stars</h4>
-      <h4>Slaves Conqured</h4>
-      <h4>Warfare formation</h4>
-    </div>
-  </div>
-
-
-  <div class="column-three">
-    <div class="three-row-one">
-        <h1 class="column-three_header">A C D E <br>F H G I J<br>M N L T<br>R S U V<br>Q X W Y<br>O P</h1>
-    </div>
-
-
-    <div class="three-row-two">
-      <h1>SURRENDER</h1>
-      <h3>ANNIHILIATED BY LEGIO HISPANIA</h3>
-    </div>
-
-
-
-  </div>
-
-
-</div>
-
-
   </body>
-
 </html>
